maze.lessons.maze.island.IslandMaze.scala.error
Escaper:41: error: Unmatched closing brace '}' ignored here
}
^